@@ -64,6 +64,8 @@ Version 1.4
 
 - Support line continuations in the INI lexer (#494).
 
+- Fix lexing of Dylan string and char literals (#628).
+
 
 Version 1.3.1
 -------------
